# ShellGameRust-GPU

./: Cargo.toml  analyze_training.py  core_clean.sh  evade_history.json  log_resources.sh  plot_timeline.py  promote_core_models.py  recover_gpu.sh  run_visualizer.sh  select_highest_core.sh  shell_finder_history.json  train800.sh  train_fast.sh  train_iterate.sh  train_static_then_coagent.sh  training_layout.py  visualizer_presets.json
src/: evade.rs  lib.rs  ml.rs  ml.rs.bak  shell_finder.rs  tree.rs  tree_visualizer.rs  visualizer.rs
tests/: gpu_backend.rs  tree_tests.rs
