[package]
name = "shellgame_rust_v2"
version = "0.2.0"
edition = "2021"

[features]
# CUDA-accelerated batch MLP inference is the default for training/benchmarks.
# Requires CUDA 12.x toolkit and compatible GPU drivers.
# CPU-only comparison builds must opt out explicitly with `--no-default-features`.
default = ["cuda"]
cuda = ["candle-core/cuda"]

[dependencies]
candle-core = "0.8"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.29", default-features = true }
egui = "0.29"
rand = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"

[[bin]]
name = "ml_self_play"
path = "src/bin/ml_self_play.rs"

[[bin]]
name = "ml_vs_naive_evader"
path = "src/bin/ml_vs_naive_evader.rs"

[[bin]]
name = "tree_visualizer"
path = "src/bin/tree_visualizer.rs"
